feat: footer & video

--- a/source/index.html
+++ b/source/index.html
@@ -246,9 +246,12 @@
           <ul class="video__list">
             <li class="video__item">
               <div class="video__information">
-                <img class="video__information-img" src="" alt="" width="40" height="40">
+                <img class="video__information-img" src="./images/video-ava/ava-mini-1x.jpg" alt="" width="40"
+                  height="40">
                 <p class="video__information-text text-base">Exposition - Le Corps et l’Ame. De Dona...</p>
-                <button class="video__information-btn">...</button>
+                <button class="video__information-btn">
+                  <span class="visually-hidden">still</span>
+                </button>
               </div>
               <!-- src="./video/video1.mp4" -->
               <video class="video__slider-video" poster="./images/video_posters/poster0-1x.jpg" controls></video>
@@ -256,9 +259,12 @@
 
             <li class="video__item">
               <div class="video__information">
-                <img class="video__information-img" src="" alt="" width="40" height="40">
-                <p class="text-base">Au Louvre ! La Venus de Milo</p>
-                <button class="video__information-btn">...</button>
+                <img class="video__information-img" src="./images/video-ava/ava-mini-1x.jpg" alt="" width="40"
+                  height="40">
+                <p class="video__information-text text-base">Au Louvre ! La Venus de Milo</p>
+                <button class="video__information-btn">
+                  <span class="visually-hidden">still</span>
+                </button>
               </div>
               <!-- src="./video/video2.mp4" -->
               <video class="video__slider-video" poster="./images/video_posters/poster2-1x.jpg" controls></video>
@@ -266,9 +272,12 @@
 
             <li class="video__item">
               <div class="video__information">
-                <img class="video__information-img" src="" alt="" width="40" height="40">
-                <p class="text-base">Promenade dans les collections mesop...</p>
-                <button class="video__information-btn">...</button>
+                <img class="video__information-img" src="./images/video-ava/ava-mini-1x.jpg" alt="" width="40"
+                  height="40">
+                <p class="video__information-text text-base">Promenade dans les collections mesop...</p>
+                <button class="video__information-btn">
+                  <span class="visually-hidden">still</span>
+                </button>
               </div>
               <!-- src="./video/video3.mp4" -->
               <video class="video__slider-video" poster="./images/video_posters/poster3-1x.jpg" controls></video>
@@ -276,9 +285,12 @@
 
             <li class="video__item">
               <div class="video__information">
-                <img class="video__information-img" src="" alt="" width="40" height="40">
-                <p class="text-base">Promenade dans les collections mesop...</p>
-                <button class="video__information-btn">...</button>
+                <img class="video__information-img" src="./images/video-ava/ava-mini-1x.jpg" alt="" width="40"
+                  height="40">
+                <p class="video__information-tex text-base">Promenade dans les collections mesop...</p>
+                <button class="video__information-btn">
+                  <span class="visually-hidden">still</span>
+                </button>
               </div>
               <!-- src="./video/video4.mp4" -->
               <video class="video__slider-video" poster="./images/video_posters/poster4-1x.jpg" controls></video>
@@ -286,9 +298,12 @@
 
             <li class="video__item">
               <div class="video__information">
-                <img class="video__information-img" src="" alt="" width="40" height="40">
-                <p class="text-base">Promenade dans les collections mesop...</p>
-                <button class="video__information-btn">...</button>
+                <img class="video__information-img" src="./images/video-ava/ava-mini-1x.jpg" alt="" width="40"
+                  height="40">
+                <p class="video__information-tex text-base">Promenade dans les collections mesop...</p>
+                <button class="video__information-btn">
+                                    <span class="visually-hidden">still</span>
+                </button>
               </div>
               <!-- src="./video/video5.mp4" -->
               <video class="video__slider-video" poster="./images/video_posters/poster5-1x.jpg" controls></video>
@@ -369,15 +384,15 @@
               <img class="gallery__img" src="./images/galery/galery12-1x.jpg" alt="" width="456" height="342">
             </li>
 
-             <li class="gallery__item">
+            <li class="gallery__item">
               <img class="gallery__img" src="./images/galery/galery13-1x.jpg" alt="" width="456" height="342">
             </li>
 
-             <li class="gallery__item">
+            <li class="gallery__item">
               <img class="gallery__img" src="./images/galery/galery14-1x.jpg" alt="" width="456" height="342">
             </li>
 
-             <li class="gallery__item">
+            <li class="gallery__item">
               <img class="gallery__img" src="./images/galery/galery15-1x.jpg" alt="" width="456" height="342">
             </li>
           </ul>
@@ -462,19 +477,23 @@
 
         <ul class="footer__social">
           <li class="footer__social-item">
-            <a class="footer__social-link" href="#"></a>
+            <a class="footer__social-link footer__social-link--youtube" href="#"></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="#"></a>
+            <a class="footer__social-link footer__social-link--inst" href="#"></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="#"></a>
+            <a class="footer__social-link footer__social-link--face" href="#"></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="#"></a>
+            <a class="footer__social-link footer__social-link--twitt" href="#"></a>
+          </li>
+
+          <li class="footer__social-item">
+            <a class="footer__social-link footer__social-link--pint" href="#"></a>
           </li>
         </ul>
       </div>
