--- a/source/index.html
+++ b/source/index.html
@@ -21,27 +21,27 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a class="nav__link text-nav" href="#">Visiting</a>
+            <a class="nav__link text-nav" href="#visiting">Visiting</a>
           </li>
 
           <li class="nav__item">
-            <a class="nav__link text-nav" href="#">Explore</a>
+            <a class="nav__link text-nav" href="#explore">Explore</a>
           </li>
 
           <li class="nav__item">
-            <a class="nav__link text-nav" href="#">Video</a>
+            <a class="nav__link text-nav" href="#video">Video</a>
           </li>
 
           <li class="nav__item">
-            <a class="nav__link text-nav" href="#">Gallery</a>
+            <a class="nav__link text-nav" href="#gallery">Gallery</a>
           </li>
 
           <li class="nav__item">
-            <a class="nav__link text-nav" href="#">Tickets</a>
+            <a class="nav__link text-nav" href="#tickets">Tickets</a>
           </li>
 
           <li class="nav__item">
-            <a class="nav__link text-nav" href="#">Contacts</a>
+            <a class="nav__link text-nav" href="#contacts">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -59,7 +59,11 @@
               <div class="welcome__item-wrapper">
                 <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <button class="button welcome__button text-btn">Discover the Louvre</button>
+                <a class="button welcome__button text-btn"
+                  href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
+                  target="_blank">
+                  Discover the Louvre
+                </a>
               </div>
             </li>
 
@@ -67,7 +71,11 @@
               <div class="welcome__item-wrapper">
                 <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <button class="button welcome__button text-btn">Discover the Louvre</button>
+                <a class="button welcome__button text-btn"
+                  href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
+                  target="_blank">
+                  Discover the Louvre
+                </a>
               </div>
             </li>
 
@@ -75,7 +83,11 @@
               <div class="welcome__item-wrapper">
                 <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <button class="button welcome__button text-btn">Discover the Louvre</button>
+                <a class="button welcome__button text-btn"
+                  href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
+                  target="_blank">
+                  Discover the Louvre
+                </a>
               </div>
             </li>
 
@@ -83,7 +95,11 @@
               <div class="welcome__item-wrapper">
                 <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <button class="button welcome__button text-btn">Discover the Louvre</button>
+                <a class="button welcome__button text-btn"
+                  href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
+                  target="_blank">
+                  Discover the Louvre
+                </a>
               </div>
             </li>
 
@@ -91,7 +107,11 @@
               <div class="welcome__item-wrapper">
                 <h2 class="welcome__slider-title title">Welcome to the Louvre</h2>
                 <p class="welcome__slider-sybtitle subtitle">From the castle to the museum</p>
-                <button class="button welcome__button text-btn">Discover the Louvre</button>
+                <a class="button welcome__button text-btn"
+                  href=" https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
+                  target="_blank">
+                  Discover the Louvre
+                </a>
               </div>
             </li>
           </ul class>
@@ -122,13 +142,15 @@
       </div>
     </section>
 
-    <section class="visiting">
+    <section class="visiting" id="visiting">
       <div class="container">
         <h2 class="visiting__title title title--section title--underline">Virtual tour</h2>
 
         <ul class="visiting__list">
           <li class="visiting__card">
-            <a class="visiting__link" href="#">
+            <a class="visiting__link"
+              href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815"
+              target="_blank">
               <img class="visiting__img" width="440" height="285" src="./images/tours/tour_1-1x.jpg" alt="Royal Palace">
               <h3 class="visiting__title-card title-card title-card--underline">Royal Palace</h3>
               <p class="visiting__text text-thin">360° Virtual Tour</p>
@@ -137,7 +159,9 @@
           </li>
 
           <li class="visiting__card">
-            <a class="visiting__link" href="#">
+            <a class="visiting__link"
+              href="https://www.google.com/maps/@48.8563254,2.3352706,3a,75y,90t/data=!3m7!1e1!3m5!1sAF1QipNRj_CwP4coDMYdCHj6qHeBeJpI2VxU5BUsOX4F!2e10!3e12!7i11000!8i5500"
+              target="_blank">
               <img class="visiting__img" width="440" height="285" src="./images/tours/tour_4-1x.jpg" alt="Denon Wing">
               <h3 class="visiting__title-card title-card title-card--underline">Denon Wing</h3>
               <p class="visiting__text text-thin">360° Virtual Tour</p>
@@ -146,7 +170,9 @@
           </li>
 
           <li class="visiting__card">
-            <a class="visiting__link" href="#">
+            <a class="visiting__link"
+              href="https://www.google.com/maps/@48.8601723,2.3395439,3a,88.4y,322.04h,84.25t/data=!3m7!1e1!3m5!1sAF1QipNMZGQuEA-pAUvIG_eP_2f3gWTKZEJ6XLVJ-Pgb!2e10!3e12!7i10240!8i5120"
+              target="_blank">
               <img class="visiting__img" width="440" height="285" src="./images/tours/tour_2-1x.jpg"
                 alt="Colonnade Perrault">
               <h3 class="visiting__title-card title-card title-card--underline">Colonnade Perrault</h3>
@@ -156,7 +182,9 @@
           </li>
 
           <li class="visiting__card">
-            <a class="visiting__link" href="#">
+            <a class="visiting__link"
+              href="https://www.google.com/maps/@48.860183,2.3356156,3a,90y,177.69h,95.61t/data=!3m7!1e1!3m5!1sAF1QipP7uFZnTITRe-7AEVAgHAfqiCL-03gvBHcYWgF3!2e10!3e12!7i5472!8i2736"
+              target="_blank">
               <img class="visiting__img" width="440" height="285" src="./images/tours/tour_5-1x.jpg" alt="Greek hall">
               <h3 class="visiting__title-card title-card title-card--underline">Greek hall</h3>
               <p class="visiting__text text-thin">360° Virtual Tour</p>
@@ -165,7 +193,9 @@
           </li>
 
           <li class="visiting__card">
-            <a class="visiting__link" href="#">
+            <a class="visiting__link"
+              href=" https://www.google.com/maps/@48.8598788,2.3355157,3a,82.2y,7.53h,94t/data=!3m7!1e1!3m5!1sAF1QipO1wkUUbyzpPjj-OR0mR5etZJT-xl-40XK8rDQ3!2e10!3e12!7i10240!8i5120"
+              target="_blank">
               <img class="visiting__img" width="440" height="285" src="./images/tours/tour_3-1x.jpg" alt="Mona Lisa">
               <h3 class="visiting__title-card title-card title-card--underline">Mona Lisa</h3>
               <p class="visiting__text text-thin">360° Virtual Tour</p>
@@ -174,7 +204,9 @@
           </li>
 
           <li class="visiting__card">
-            <a class="visiting__link" href="#">
+            <a class="visiting__link"
+              href="https://www.google.com/maps/@48.8563254,2.3352706,3a,90y,21.26h,79.91t/data=!3m7!1e1!3m5!1sAF1QipPpGAowYatVyk3MMGnZAaQkYm2EUk-Dlca06SS5!2e10!3e12!7i11304!8i5652"
+              target="_blank">
               <img class="visiting__img" width="440" height="285" src="./images/tours/tour_6-1x.jpg" alt="Night Palace">
               <h3 class="visiting__title-card title-card title-card--underline">Night Palace</h3>
               <p class="visiting__text text-thin">360° Virtual Tour</p>
@@ -185,7 +217,7 @@
       </div>
     </section>
 
-    <section class="explore">
+    <section class="explore" id="explore">
       <div class="explore__container container">
         <div class="explore__wrapper">
           <h2 class="explore__title title title--underline">Picture explore</h2>
@@ -209,7 +241,7 @@
       </div>
     </section>
 
-    <section class="video">
+    <section class="video" id="video">
       <div class="container">
         <div class="video__title-wrapper">
           <h2 class="title title--section">Video journey</h2>
@@ -229,13 +261,14 @@
               <span class="visually-hidden">play</span>
             </button>
 
-            <input class="video__progress" type="range" value="40" min="0" max="100" step="1">
+            <input class="video__progress video__range" type="range" value="40" min="0" max="100" step="1">
 
             <button class="video__volume" type="button">
               <span class="visually-hidden">volume</span>
             </button>
 
-            <input class="video__progress-volume" type="range" value="40" min="0" max="100" step="1">
+            <input class="video__progress-volume video__range" type="range" value="40" min="0" max="100" step="1">
+
             <button class="video__fullscreen" type="button">
               <span class="visually-hidden">fullscreen</span>
             </button>
@@ -302,7 +335,7 @@
                   height="40">
                 <p class="video__information-tex text-base">Promenade dans les collections mesop...</p>
                 <button class="video__information-btn">
-                                    <span class="visually-hidden">still</span>
+                  <span class="visually-hidden">still</span>
                 </button>
               </div>
               <!-- src="./video/video5.mp4" -->
@@ -331,7 +364,7 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <div class="container">
         <h2 class="gallery__title title">Art Gallery</h2>
         <div class="gallery__slider">
@@ -400,24 +433,74 @@
       </div>
     </section>
 
-    <section class="tickets">
+    <section class="tickets" id="tickets">
       <div class="container">
         <h2 class="tickets__title title title--section title--underline">BUY TICKETS</h2>
         <div class="tickets__wrapper">
           <img class="tickets__img" src="./images/tickets/tickets-1x.jpg" alt="" width="720" height="550">
 
-          <form class="tickets__form form" action="">
-            найди!!!
+          <form class="tickets__form form" action="" method="post" autocomplete="off">
+            <div class="form__wrapper">
+              <div class="form__wrapper-type">
+                <h3 class="form__title text-bold">Ticket Type</h3>
+
+                <label class="form__label text-light">
+                  <input class="form__input visually-hidden" type="radio" name="ticket Type"
+                    value="Permanent exhibition" checked>
+
+                  <span class="form__checkmark"></span>
+                  <span>Permanent exhibition</span>
+                </label>
+
+                <label class="form__label text-light">
+                  <input class="form__input visually-hidden" type="radio" name="ticket Type"
+                    value="Temporary exhibition" disabled>
+                  <span class="form__checkmark"></span>
+                  <span>Temporary exhibition</span>
+
+                </label>
+
+                <label class="form__label text-light">
+                  <input class="form__input visually-hidden" type="radio" name="ticket Type" value="Combined Admission">
+                  <span class="form__checkmark"></span>
+                  <span>Combined Admission</span>
+
+                </label>
+              </div>
+
+              <div class="form__wrapper-amount">
+                <h3 class="form__title text-bold">Amount</h3>
+
+                <p class="form__text text-light"> Basic 18+</p>
+                <div class="form__wrapper-counter">
+                  <button class="form_count-btn" type="button">–</button>
+                  <input class="form__number" type="number" min="0" value="1">
+                  <button class="form_count-btn" type="button">+</button>
+                </div>
+
+                <p class="form__text text-light">Senior 65+</p>
+                <div class="form__wrapper-counter">
+                  <button class="form_count-btn" type="button">–</button>
+                  <input class="form__number" type="number" min="0" value="1">
+                  <button class="form_count-btn" type="button">+</button>
+                </div>
+
+                <p class="form__price text-bold">Total € 220</p>
+              </div>
+            </div>
+
+            <button class="form__btn text-light" type="button">Buy Now</button>
           </form>
+
         </div>
       </div>
     </section>
 
     <div class="page__decor">
-      <img class="page__img" src="./images/parallax-1x.jpg" alt="" width="1920" height="400">
+      <img class="page__img" src="./images/parallax/parallax_large-1x.jpg" alt="" width="1920" height="400">
     </div>
 
-    <section class="contacts">
+    <section class="contacts" id="contacts">
       <div class="container">
         <h2 class="contacts__title title title--section title--underline">Contacts</h2>
         <div class="contacts__wrapper">
@@ -450,50 +533,50 @@
         <nav class="nav">
           <ul class="footer__nav">
             <li class="nav__item">
-              <a class="nav__link text-nav" href="#">Visiting</a>
+              <a class="nav__link text-nav" href="#visiting">Visiting</a>
             </li>
 
             <li class="nav__item">
-              <a class="nav__link text-nav" href="#">Explore</a>
+              <a class="nav__link text-nav" href="#explore">Explore</a>
             </li>
 
             <li class="nav__item">
-              <a class="nav__link text-nav" href="#">Video</a>
+              <a class="nav__link text-nav" href="#video">Video</a>
             </li>
 
             <li class="nav__item">
-              <a class="nav__link text-nav" href="#">Gallery</a>
+              <a class="nav__link text-nav" href="gGallery">Gallery</a>
             </li>
 
             <li class="nav__item">
-              <a class="nav__link text-nav" href="#">Tickets</a>
+              <a class="nav__link text-nav" href="#tickets">Tickets</a>
             </li>
 
             <li class="nav__item">
-              <a class="nav__link text-nav" href="#">Contacts</a>
+              <a class="nav__link text-nav" href="#contacts">Contacts</a>
             </li>
           </ul>
         </nav>
 
         <ul class="footer__social">
           <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--youtube" href="#"></a>
+            <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/user/louvre" target="_blank"></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--inst" href="#"></a>
+            <a class="footer__social-link footer__social-link--inst" href="https://www.instagram.com/museelouvre/" target="_blank"></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--face" href="#"></a>
+            <a class="footer__social-link footer__social-link--face" href="https://www.facebook.com/museedulouvre" target="_blank"></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--twitt" href="#"></a>
+            <a class="footer__social-link footer__social-link--twitt" href="http://twitter.com/museelouvre" target="_blank"></a>
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link footer__social-link--pint" href="#"></a>
+            <a class="footer__social-link footer__social-link--pint" href="https://www.pinterest.fr/museedulouvre/" target="_blank"></a>
           </li>
         </ul>
       </div>
